--- a/set1/Makefile
+++ b/set1/Makefile
@@ -3,6 +3,7 @@ all:
 	ocamlfind ocamlc -package batteries -linkpkg -o challenge2 challenge1.cmo challenge2.ml
 	ocamlfind ocamlc -package batteries -linkpkg -o challenge3 challenge1.cmo challenge2.cmo challenge3.ml
 	ocamlfind ocamlc -package batteries -linkpkg -o challenge4 challenge1.cmo challenge2.cmo challenge3.cmo challenge4.ml
+	ocamlfind ocamlc -package batteries -linkpkg -o challenge5 challenge1.cmo challenge2.cmo challenge5.ml
 
 test:
 	@echo "SSdtIGtpbGxpbmcgeW91ciBicmFpbiBsaWtlIGEgcG9pc29ub3VzIG11c2hyb29t"
@@ -13,6 +14,8 @@ test:
 	@./challenge3
 	@echo "Now that the party is jumping"
 	@./challenge4
+	@echo "0b3637272a2b2e63622c2e69692a23693a2a3c6324202d623d63343c2a26226324272765272a282b2f20430a652e2c652a3124333a653e2b2027630c692b20283165286326302e27282f"
+	@./challenge5
 
 clean:
 	rm -f *.cmi *.cmo
@@ -20,3 +23,4 @@ clean:
 	rm -f challenge2
 	rm -f challenge3
 	rm -f challenge4
+	rm -f challenge5
